# docker-dnsmasq-updater

./: dnsmasq_updater.py  pyproject.toml
src/docker_udm_dns/: main.py
src/docker_udm_dns/handlers/: api_server.py  docker.py  hosts.py  local.py  remote.py  signal.py  udm.py
src/docker_udm_dns/shared/: config.py  logging.py  resettable_timer.py
